# aliyun-kms-cpp-sdk

./: .gitignore  CMakeLists.txt  README-CN.md  README.md  easyinstall.sh
core/include/alibabacloud/core/: Utils.h
core/src/: Utils.cc
examples/: CMakeLists.txt  README.md
examples/kms/: CMakeLists.txt  kms.cc
kms/: CMakeLists.txt
kms/include/alibabacloud/kms/: KmsClient.h
kms/src/: KmsClient.cc
